apps/base/adguard/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adguard
  labels:
    http-ingress: "true"
