apps/base/adguard/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-admin
  namespace: adguard
  labels:
    app.kubernetes.io/name: adguard
spec:
  type: ClusterIP
  selector:
    statefulset.kubernetes.io/pod-name: adguard-0
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: https
      port: 8443
      targetPort: https
    - name: setup
      port: 3000
      targetPort: setup
