apps/base/adguard/service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: adguard
  labels:
    app: adguard
    app.kubernetes.io/name: adguard-dns
    app.kubernetes.io/component: dns
  annotations:
    lbipam.cilium.io/ip-pool: single-node-pool
    lbipam.cilium.io/sharing-cross-namespace: default,audiobookshelf,linkding,mealie,pihole,adguard
    lbipam.cilium.io/sharing-key: homelab
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: adguard-dns
    app.kubernetes.io/component: dns
  ports:
    - name: dns
      port: 53
      targetPort: dns
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
