apps/base/adguard/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
  namespace: adguard
  labels:
    app: adguard
    app.kubernetes.io/name: adguard-web
    app.kubernetes.io/component: web
  annotations:
    lbipam.cilium.io/ip-pool: single-node-pool
    lbipam.cilium.io/sharing-cross-namespace: default,audiobookshelf,linkding,mealie,pihole,adguard
    lbipam.cilium.io/sharing-key: homelab
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: adguard-web
    app.kubernetes.io/component: web
  ports:
    - name: setup
      port: 3000
      targetPort: setup
    - name: http
      port: 8080
      targetPort: http
    - name: https
      port: 8443
      targetPort: https
