apps/base/adguard/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: adguard-http
  namespace: adguard
  labels:
    http-ingress: "true"
spec:
  hostnames:
    - adguard-stage.burntbytes.com
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: http
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: adguard-https
  namespace: adguard
  labels:
    http-ingress: "true"
spec:
  hostnames:
    - adguard-stage.burntbytes.com
  parentRefs:
    - name: app-gateway-staging
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
      - name: adguard
        port: 8080
